--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
             <div class="d-flex" id="wrapper" data-aos="fade-right">
                 <!-- sidebar -->
                 <div class="border-right" id="sidebar-wrapper">
-                    <div class="sidebar-header text-center">
+                    <div class="sidebar-heading text-center">
                         <img
                             src="images/dashboard-store-log.svg"
                             alt=""
@@ -71,128 +71,110 @@
                             Sign Out
                         </a>
                     </div>
-
-                    <!-- page content -->
-                    <div id="page-content-wrapper">
-                        <nav
-                            class="
-                                navbar
-                                navbar-expand-lg
-                                navbar-light
-                                navbar-store
-                                fixed-top
-                            "
-                            data-aos="fade-down"
-                        >
-                            <div class="container-fluid">
-                                <button
-                                    class="
-                                        btn btn-secondary
-                                        d-md-none
-                                        mr-auto mr-2
-                                    "
-                                    id="menu-toggle"
-                                >
-                                    &laquo; Menu
-                                </button>
-                                <button
-                                    class="navbar-toggler"
-                                    type="button"
-                                    data-toggle="collapse"
-                                    data-target="#navbarSupportedContent"
-                                >
-                                    <span class="navbar-toggler-icon"> </span>
-                                </button>
-                                <div
-                                    class="collapse navbar-collapse"
-                                    id="navbarSupportedContent"
-                                >
-                                    <!-- dekstop menu -->
-                                    <ul
-                                        class="
-                                            navbar-nav
-                                            d-none d-lg-flex
-                                            ml-auto
-                                        "
-                                    >
-                                        <li class="nav-item dropdown">
-                                            <a
-                                                href="#"
-                                                class="nav-link"
-                                                id="navbarDropdown"
-                                                role="button"
-                                                data-toggle="dropdown"
-                                            >
-                                                <img
-                                                    src="images/user_pc.png"
-                                                    alt=""
-                                                    class="
-                                                        roundd-circle
-                                                        mr-2
-                                                        profile-picture
-                                                    "
-                                                />
-                                                Hi, Rizal
-                                            </a>
-                                            <div class="dropdown-menu">
-                                                <a
-                                                    href="/dashboard.html"
-                                                    class="dropdown-item"
-                                                >
-                                                    Dashboard
-                                                </a>
-                                                <a
-                                                    href="/dashboard-account.html"
-                                                    class="dropdown-item"
-                                                >
-                                                    Settings
-                                                </a>
-                                                <div class="dropdown-divider">
-                                                    <a
-                                                        href="#"
-                                                        class="dropdown-item"
-                                                    ></a>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a
-                                                href="#"
+                </div>
+                <!-- page content -->
+                <div id="page-content-wrapper">
+                    <nav
+                        class="
+                            navbar navbar-expand-lg navbar-light navbar-store
+                            fixed-top
+                        "
+                        data-aos="fade-down"
+                    >
+                        <div class="container-fluid">
+                            <button
+                                class="btn btn-secondary d-md-none mr-auto mr-2"
+                                id="menu-toggle"
+                            >
+                                &laquo; Menu
+                            </button>
+                            <button
+                                class="navbar-toggler"
+                                type="button"
+                                data-toggle="collapse"
+                                data-target="#navbarSupportedContent"
+                            >
+                                <span class="navbar-toggler-icon"> </span>
+                            </button>
+                            <div
+                                class="collapse navbar-collapse"
+                                id="navbarSupportedContent"
+                            >
+                                <!-- dekstop menu -->
+                                <ul class="navbar-nav d-none d-lg-flex ml-auto">
+                                    <li class="nav-item dropdown">
+                                        <a
+                                            href="#"
+                                            class="nav-link"
+                                            id="navbarDropdown"
+                                            role="button"
+                                            data-toggle="dropdown"
+                                        >
+                                            <img
+                                                src="images/user_pc.png"
+                                                alt=""
                                                 class="
-                                                    nav-link
-                                                    d-inline-block
-                                                    mt-2
+                                                    roundd-circle
+                                                    mr-2
+                                                    profile-picture
                                                 "
-                                            >
-                                                <img
-                                                    src="images/icon-cart-filled.svg"
-                                                    alt=""
-                                                />
-                                                <div class="card-badge">3</div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <ul class="navbar-nav d-block d-lg-none">
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                Hi, Rizal
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
+                                            />
+                                            Hi, Rizal
+                                        </a>
+                                        <div class="dropdown-menu">
                                             <a
-                                                href="#"
-                                                class="nav-link d-inline-block"
+                                                href="/dashboard.html"
+                                                class="dropdown-item"
                                             >
-                                                Cart
+                                                Dashboard
                                             </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                            <a
+                                                href="/dashboard-account.html"
+                                                class="dropdown-item"
+                                            >
+                                                Settings
+                                            </a>
+                                            <div class="dropdown-divider">
+                                                <a
+                                                    href="#"
+                                                    class="dropdown-item"
+                                                ></a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a
+                                            href="#"
+                                            class="nav-link d-inline-block mt-2"
+                                        >
+                                            <img
+                                                src="images/icon-cart-filled.svg"
+                                                alt=""
+                                            />
+                                            <div class="card-badge">3</div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="navbar-nav d-block d-lg-none">
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">
+                                            Hi, Rizal
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a
+                                            href="#"
+                                            class="nav-link d-inline-block"
+                                        >
+                                            Cart
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
-                        </nav>
+                        </div>
+                    </nav>
 
-                        <!-- content -->
-                    </div>
+                    <!-- content -->
                 </div>
             </div>
         </div>
