--- a/dashboard-product.html
+++ b/dashboard-product.html
@@ -154,7 +154,7 @@
                                                     alt=""
                                                     class="w-100 mb-2"
                                                 />
-                                                <div class="product-detail">Sirup Marjan</div>
+                                                <div class="product-title">Sirup Marjan</div>
                                                 <div class="product-category">Foods</div>
                                             </div>
                                         </a>
@@ -170,7 +170,7 @@
                                                     alt=""
                                                     class="w-100 mb-2"
                                                 />
-                                                <div class="product-detail">Sirup Marjan</div>
+                                                <div class="product-title">Sirup Marjan</div>
                                                 <div class="product-category">Foods</div>
                                             </div>
                                         </a>
@@ -186,7 +186,7 @@
                                                     alt=""
                                                     class="w-100 mb-2"
                                                 />
-                                                <div class="product-detail">Sirup Marjan</div>
+                                                <div class="product-title">Sirup Marjan</div>
                                                 <div class="product-category">Foods</div>
                                             </div>
                                         </a>
@@ -202,7 +202,7 @@
                                                     alt=""
                                                     class="w-100 mb-2"
                                                 />
-                                                <div class="product-detail">Sirup Marjan</div>
+                                                <div class="product-title">Sirup Marjan</div>
                                                 <div class="product-category">Foods</div>
                                             </div>
                                         </a>
@@ -218,7 +218,7 @@
                                                     alt=""
                                                     class="w-100 mb-2"
                                                 />
-                                                <div class="product-detail">Sirup Marjan</div>
+                                                <div class="product-title">Sirup Marjan</div>
                                                 <div class="product-category">Foods</div>
                                             </div>
                                         </a>
