--- a/dashboard-product-create.html
+++ b/dashboard-product-create.html
@@ -128,100 +128,83 @@
                     <div class="section-content section-dashboard-home" data-aos="fade-up">
                         <div class="container-fluid">
                             <div class="dashboard-heading">
-                                <h2 class="dashboard-title">Dashboard</h2>
-                                <p class="dashboard-subtitle">Look what you have made today!</p>
+                                <h2 class="dashboard-title">Create New Product</h2>
+                                <p class="dashboard-subtitle">Create your own product</p>
                             </div>
                             <div class="dashboard-content">
                                 <div class="row">
                                     <div class="col-12">
-                                        <a
-                                            href="dashboard-product-create.html"
-                                            class="btn btn-success"
-                                        >
-                                            Add new Products
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="row mt-4">
-                                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                        <a
-                                            href="dashboard-product-detail.html"
-                                            class="card card-dashboard-product d-block"
-                                        >
-                                            <div class="card-body">
-                                                <img
-                                                    src="images/product-card-1.png"
-                                                    alt=""
-                                                    class="w-100 mb-2"
-                                                />
-                                                <div class="product-title">Sirup Marjan</div>
-                                                <div class="product-category">Foods</div>
+                                        <form action="">
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <div class="row">
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label for="">Product Name </label>
+                                                                <input
+                                                                    type="text"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <label for="">Price </label>
+                                                                <input
+                                                                    type="number"
+                                                                    class="form-control"
+                                                                />
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <div
+                                                                class="form-group"
+                                                                v-if="is_store_open"
+                                                            >
+                                                                <label for="">Category</label>
+                                                                <select
+                                                                    name="category"
+                                                                    class="form-control"
+                                                                >
+                                                                    <option value="" disabled>
+                                                                        Select Category
+                                                                    </option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <div class="form-group">
+                                                                <label for="">Description</label>
+                                                                <textarea name="editor"></textarea>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-12">
+                                                            <div class="form-group">
+                                                                <label for="">Thumbnails </label>
+                                                                <input
+                                                                    type="file"
+                                                                    class="form-control"
+                                                                />
+                                                                <p class="text-muted">
+                                                                    Kamu dapat memilih lebih dari
+                                                                    satu file
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col text-right">
+                                                            <button
+                                                                type="submit"
+                                                                class="btn btn-success px-5"
+                                                            >
+                                                                Save Now
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                        <a
-                                            href="dashboard-product-detail.html"
-                                            class="card card-dashboard-product d-block"
-                                        >
-                                            <div class="card-body">
-                                                <img
-                                                    src="images/product-card-2.png"
-                                                    alt=""
-                                                    class="w-100 mb-2"
-                                                />
-                                                <div class="product-title">Sirup Marjan</div>
-                                                <div class="product-category">Foods</div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                        <a
-                                            href="dashboard-product-detail.html"
-                                            class="card card-dashboard-product d-block"
-                                        >
-                                            <div class="card-body">
-                                                <img
-                                                    src="images/product-card-3.png"
-                                                    alt=""
-                                                    class="w-100 mb-2"
-                                                />
-                                                <div class="product-title">Sirup Marjan</div>
-                                                <div class="product-category">Foods</div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                        <a
-                                            href="dashboard-product-detail.html"
-                                            class="card card-dashboard-product d-block"
-                                        >
-                                            <div class="card-body">
-                                                <img
-                                                    src="images/product-card-4.png"
-                                                    alt=""
-                                                    class="w-100 mb-2"
-                                                />
-                                                <div class="product-title">Sirup Marjan</div>
-                                                <div class="product-category">Foods</div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                                        <a
-                                            href="dashboard-product-detail.html"
-                                            class="card card-dashboard-product d-block"
-                                        >
-                                            <div class="card-body">
-                                                <img
-                                                    src="images/product-card-5.png"
-                                                    alt=""
-                                                    class="w-100 mb-2"
-                                                />
-                                                <div class="product-title">Sirup Marjan</div>
-                                                <div class="product-category">Foods</div>
-                                            </div>
-                                        </a>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -243,6 +226,10 @@
                 e.preventDefault();
                 $('#wrapper').toggleClass('toggled');
             });
+        </script>
+        <script src="https://cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+        <script>
+            CKEDITOR.replace('editor');
         </script>
     </body>
 </html>
